--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,23 @@
+/*google fonts import*/
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 /*styles to override browser*/
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+/*general styles*/
+body {
+    min-height: 100vh;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    color: black;
+    font-family: 'Roboto Mono';
+    background-image: url(../images/headerimage.png);
+    background-repeat: round;
+    background-size: 100px;
 }
