--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,5 +69,27 @@ button {
     width: 45vw;
     height: 7vh;
     margin-top: 1rem;
+    font-size: 20px;
 
+}
+
+/*styles for input elements*/
+#username_container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+}
+
+input {
+    border: 2px solid black;
+    border-radius: 12px;
+    background: gainsboro;
+    margin-top: 0.5rem;
+    width: 45vw;
+    height: 7vh;
+    font-size: 20px;
+}
+
+#username {
+    padding-left: 0.5rem;
 }
