--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,5 +96,9 @@ input {
 
 /*media query for tablets*/
 @media screen and (min-width: 768px) {
-    
+    /*main content styles*/
+#how_to_container, #qa_container, #score_container {
+    width: 70vw;
+}
+
 }
