--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,10 @@ header {
     background: gainsboro;
 }
 
+#qa_container {
+    width: 70vw;
+}
+
 /*button styles*/
 button {
     border: 2px solid black;
