--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,10 @@ button {
 
 }
 
+button:hover {
+    border: 4px solid red;
+}
+
 /*styles for input elements*/
 #username_container {
     display: flex;
