--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,10 @@ input {
     padding: 0.5rem;
 }
 
+.swal-button {
+    width: 30vw
+}
+
 /*media query for tablets*/
 @media screen and (min-width: 768px) {
     /*body styles*/
